# llama-cpp-python-base

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
src/my_ai/cli/: cli.py
src/my_ai/model_serve/: __init__.py  model_serve.py
